// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fully eligible requirements almost met, hearing in future 1`] = `
Array [
  Object {
    "text": "Next review date (Aug 8, 2022) is in 7 days",
  },
]
`;

exports[`fully eligible requirements almost met, hearing tomorrow 1`] = `
Array [
  Object {
    "text": "Next review date (Aug 2, 2022) is tomorrow",
  },
]
`;

exports[`fully eligible requirements almost met, missing date 1`] = `
Array [
  Object {
    "text": "Missing review date",
  },
]
`;

exports[`fully eligible requirements almost met, missing date 2`] = `"Missing review date"`;

exports[`fully eligible requirements met 1`] = `
Array [
  Object {
    "text": "-94 day(s) overdue for hearing (Nov 3, 2022)",
  },
]
`;

exports[`fully eligible requirements met, overdue today 1`] = `
Array [
  Object {
    "text": "0 day(s) overdue for hearing (Aug 1, 2022)",
  },
]
`;

exports[`fully eligible requirements met, overdue yesterday 1`] = `
Array [
  Object {
    "text": "1 day(s) overdue for hearing (Jul 31, 2022)",
  },
]
`;
